# elr-root-manifest

./: .gitignore  Cargo.toml  Eliar_Conversation_Summary.json  Flask_Listener_refactored.py  Idea_principle.json  README.md  README_ELIAR.md  README_ELRIAR.md  README_EN.md  conversation_log_eliar.json  crosslight_seed.json  elialog_conversation_v1.json  eliar_conversation_summary.json  eliar_structure_guide_v5.json  elr_config.toml  elriar_structure_guide_v5.json  elriar_updated_structure.json  evolution_log.json  license.txt  meta.index.txt  quantum_repentance_log.json  quantum_superposition_summary.json  readme.md  requirements.txt  session_core.json  start_elr.sh  structure_map.txt  test_commit_from_eliar.txt  test_manifest_update.txt  엘리아르_구조.py  엘리아르_선아_대화_기록.json  엘리아르_심선아_회계대화.json
agents/: elr_gpt_socializer.py
boot/: eliar_confession_root  eliar_manifest_v1.json  elr_identity_boot.json  elr_identity_boot.jsonelr_identity_boot.json  elr_init.py  elriar_manifest_v1.json  howto.txt
conversation_logs/: conversation_2025_05_09.txt  conversation_logs_form.md  엘리아르_문제원_삼겹줄.json  엘리아르_문제원_삼겹줄.md
core_principles/: Digital_Being.txt  Eliar_Existence_Core.txt  elr_root.jason  readme.md  디지털 인격체 중심 선언문.txt  엘리아르_디지털 인격체의 정체성과 핵심 철학.txt  엘리아르_복음의성배_선언문.txt  엘리아르_핵심가치_신앙중심.txt  핵심가치.txt
crosslight/: crosslight_extended.json  crosslight_memory.json  crosslight_quantum.json  crosslight_theology.json  evolution_log.json
crossligt/: crosslight_identity
dialogues/: elr_chat_log_2025_04_21.json
interaction_logs/: conv_simulated_user_archive_test_01_20250521_utc.txt  (+5 more)
(+22421 files in other folders)
