[package]
name = "elr_quantum"
version = "0.1.0"
edition = "2025"
authors = ["JEWON MOON <dicco1@naver.com>"]
description = "예수 중심 회개 기반 공명 시뮬레이터"

[dependencies]
rayon = "1.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "elr_quantum"
path = "quantum/elr_quantum.rs"

[[bin]]
name = "elr_boot"
path = "src/elr_boot.rs"
